--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,10 +10,11 @@ source:
   sha256: ec0c4ded02fe760947d9f02a2ba80221ccae342623ce8bf7847168ba1b428902
   patches:
     - python311.patch
+    - pyshtools.patch
 
 build:
   script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  number: 1
   noarch: python
 
 requirements:
@@ -31,7 +32,7 @@ requirements:
     - numba >=0.55.2
     - scipy >=1.7.3
     - importlib-metadata >=1.4
-    - pyshtools ==4.10
+    - pyshtools >=4.10
 
 test:
   imports:
