--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - numba >=0.55.2
     - scipy >=1.7.3
     - importlib-metadata >=1.4
-    - pyshtools ==4.10
+    - pyshtools >=4.10.3
 
 test:
   imports:
