--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,10 +16,10 @@ build:
 
 requirements:
   host:
-    - python >=3.7
+    - python <=3.12,>=3.7
     - pip
   run:
-    - python >=3.7
+    - python <=3.12,>=3.7
     - spglib >=1.10.4
     - pymatgen >=2023.10.3
     - pandas >=2.0.2
